[package]
name = "crows_nest"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]
license = "Unlicense"
homepage = "https://ndouglas.github.io/hornvale/"
repository = "https://github.com/ndouglas/hornvale/"
documentation = "https://ndouglas.github.io/hornvale/"
readme = "README.md"
keywords = ["crows_nest"]
default-run = "crows_nest"

[lib]
name = "crows_nest"
path = "src/lib.rs"

[[bin]]
name = "crows_nest"
path = "src_bin/crows_nest/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
thiserror = "1.0"

